# go-logsink

./: .gitignore  go.mod  main.go
client/: main.go
cmd/: connect.go  listen.go  web.go
libs/java/: pom.xml
logsink/: logsink.pb.go
server/: server.go
v2/: BAZEL_TODOS  BUILD.bazel  WORKSPACE  go.sum  main.go
v2/cmd/: BUILD.bazel  connect.go  listen.go  web.go
v2/internal/client/: BUILD.bazel
v2/internal/console/: BUILD.bazel
v2/internal/grpcserver/: BUILD.bazel
v2/internal/server/: BUILD.bazel
v2/internal/web/: BUILD.bazel
v2/logsink/: BUILD.bazel
web/: server.go  web.go
