load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/sascha-andres/go-logsink/v2
gazelle(name = "gazelle")

go_library(
    name = "go-logsink_lib",
    srcs = ["main.go"],
    importpath = "github.com/sascha-andres/go-logsink/v2",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "@com_github_google_gops//agent:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "v2",
    embed = [":go-logsink_lib"],
    visibility = ["//visibility:public"],
)
