load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "completion.go",
        "connect.go",
        "doc.go",
        "listen.go",
        "lockHandling.go",
        "locking.go",
        "root.go",
        "web.go",
    ],
    importpath = "github.com/sascha-andres/go-logsink/v2/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/client",
        "//internal/console",
        "//internal/web",
        "@com_github_nightlyone_lockfile//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_cobra//doc:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
