load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "connect.go",
        "filtered.go",
        "get_reader.go",
        "line_filter.go",
        "line_formatter.go",
        "line_producer.go",
        "line_sender.go",
        "setup_filter.go",
        "setup_prefix.go",
    ],
    importpath = "github.com/sascha-andres/go-logsink/v2/internal/client",
    visibility = ["//:__subpackages__"],
    deps = [
        "//logsink",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@net_starlark_go//starlark:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
