load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpcserver",
    srcs = [
        "listen.go",
        "new_server.go",
        "send_line.go",
        "start_debug.go",
        "types.go",
    ],
    importpath = "github.com/sascha-andres/go-logsink/v2/internal/grpcserver",
    visibility = ["//:__subpackages__"],
    deps = [
        "//logsink",
        "@com_github_arl_statsviz//:go_default_library",
        "@com_github_gorilla_handlers//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)
