load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = [
        "client.go",
        "client_dequeue.go",
        "client_enqueue.go",
        "client_has_elements.go",
        "client_new.go",
        "client_publish_queue_content_to_web_socket.go",
        "client_read_pump.go",
        "client_write_pump.go",
        "get_file_system.go",
        "hub.go",
        "hub_run.go",
        "serve_web_socket.go",
        "server.go",
        "server_process_output.go",
        "start.go",
        "types.go",
    ],
    embedsrcs = [
        "dist/assets/logo.png",
        "dist/css/app.deeae0d4.css",
        "dist/css/chunk-vendors.036b6237.css",
        "dist/favicon.ico",
        "dist/index.html",
        "dist/js/app.9518a4c9.js",
        "dist/js/app.9518a4c9.js.map",
        "dist/js/chunk-vendors.2bfd87c3.js",
        "dist/js/chunk-vendors.2bfd87c3.js.map",
    ],
    importpath = "github.com/sascha-andres/go-logsink/v2/internal/web",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/grpcserver",
        "//logsink",
        "@com_github_arl_statsviz//:go_default_library",
        "@com_github_gorilla_handlers//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
